--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "node server.js",
+    "watch": "nodemon server.js"
     
   },
   "author": "",
@@ -14,3 +15,6 @@
     "express": "^4.16.4"
   }
 }
+
+
+
