--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "nanoid": "^3.1.23",
+    "nodemon": "^2.0.9",
+    "uuid": "^8.3.2"
   }
 }
 
