--- a/package.json
+++ b/package.json
@@ -7,15 +7,12 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "watch": "nodemon server.js"
-    
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
-    "nanoid": "^3.1.23",
-    "nodemon": "^2.0.9",
-    "uuid": "^8.3.2"
+    "nodemon": "^2.0.9"
   }
 }
 
